<resources>
    <string name="version" translatable="false">Ver: 1.6.6.19</string>
    <string name="aceptar">Aceptar</string>
    <string name="password_placeholder">Contraseña</string>
    <string name="log_in">Iniciar</string>
    <string name="welcome">¡Bienvenido!</string>
    <string name="registry_instructions">Por favor, escribe tu número de empleado.</string>
    <string name="login_full">Iniciar Sesión</string>
    <string name="log_out">Cerrar sesión</string>
    <string name="profile_mail">Correo</string>
    <string name="all_programs_button">Todos los Programas</string>
    <string name="update_button">Actualizar</string>
    <string name="legal">Legal</string>
    <string name="wrong_password_message">El nombre de usuario o la contraseña son incorrectas, favor de verificarlo.</string>
    <string name="forgotten_password"><u>¿Olvidaste tu contraseña?</u></string>
    <string name="popup_pass_requs_title">Tu contraseña debe tener:</string>
    <string name="pass_req_01">8 o más caracteres</string>
    <string name="pass_req_02">Letras mayúsculas</string>
    <string name="pass_req_03">Letras minúsculas</string>
    <string name="pass_req_04">Número(s)</string>
    <string name="pass_req_05">Caracter especial y/o de puntuación</string>
    <string name="begin_text">Iniciar</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_cells">Células de entrenamiento</string>
    <string name="menu_legal">Legal</string>
    <string name="menu_notif">Notificaciones</string>
    <string name="title_activity_home_navigation">HomeActivityNavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="my_profile">Mi Perfil</string>
    <string name="my_profile_ranking">Mi Ranking</string>
    <string name="my_profile_stats">Mi Actividad</string>
    <string name="my_profile_rewards">Mis Recompensas</string>
    <string name="my_profile_settings">Ver configuración</string>
    <string name="country_mexico">México</string>
    <string name="drawer_title_my_Account">Mi Cuenta</string>
    <string name="my_profile_emp_number">No. de Empleado</string>
    <string name="my_profile_pos_desc">Descripción de la posición</string>
    <string name="my_profile_contribution">Nivel de contribución</string>
    <string name="my_profile_functional_area">Nombre del área funcional</string>
    <string name="my_profile_denomination">Denominación centro de coste</string>
    <string name="my_profile_country">País</string>
    <string name="my_profile_direct_boss">Nombre jefe directo</string>
    <string name="my_profile_directboss_number">No. de empleado de jefe directo</string>
    <string name="my_profile_info">En caso de que tus datos sean incorrectos por favor comunícate con tu área de Recursos Humanos.</string>
    <string name="empty_fields">Los campos son requeridos.</string>
    <string name="server_error">Ocurrió un error en el servidor, intente de nuevo más tarde.</string>
    <string name="timeout">No se pudo procesar su solicitud, por favor intentelo más tarde.</string>
    <string name="no_internet">No hay conexión a internet.</string>
    <string name="user_doesnt_exists">Lo sentimos el número de empleado que ingreso no existe, verifiquelo</string>
    <string name="blocked_user">Máximo de 5 intentos de inicio de sesión, su usuario ha sido bloqueado</string>
    <string name="kofsection_temario">Temario</string>
    <string name="title_activity_legal">LegalActivity</string>
    <string name="legal_terms">Términos y condiciones</string>
    <string name="legal_privacy">Aviso de privacidad</string>
    <string name="gif">GIF</string>
    <string name="pdf">Documento PDF</string>
    <string name="my_ranking">Mi Ranking</string>
    <string name="my_ranking_earned_points">Mis Puntos \nGanados</string>
    <string name="my_ranking_active_programs">Programas \n activos</string>
    <string name="my_ranking_finished_programs">Programas \n terminados</string>
    <string name="my_ranking_active">\t\t\tActivos\t\t\t</string>
    <string name="my_ranking_history">\t\t\tHistorial\t\t\t</string>
    <string name="video">Video</string>
    <string name="what_is_app">¿Qué es App Talento RH?</string>
    <string name="my_profile_emp_number_full">Número de empleado</string>
    <string name="next">Siguiente</string>
    <string name="registry_instructions_2">Por favor, indícanos tu fecha de nacimiento.</string>
    <string name="birth_date">Fecha de nacimiento</string>
    <string name="cancel">Cancelar</string>
    <string name="accept_terms_and_advice"><u>Acepto Términos y Condiciones y Aviso de Privacidad.</u></string>
    <string name="january">Enero</string>
    <string name="february">Febrero</string>
    <string name="march">Marzo</string>
    <string name="april">Abril</string>
    <string name="may">Mayo</string>
    <string name="june">Junio</string>
    <string name="july">Julio</string>
    <string name="august">Agosto</string>
    <string name="september">Septiembre</string>
    <string name="october">Octubre</string>
    <string name="november">Noviembre</string>
    <string name="december">Diciembre</string>
    <string name="active_session">Ya existe una sesión activa.</string>
    <string name="are_you_new"><u>¿Eres nuevo?</u></string>
    <string name="are_you_new_2"><u> Regístrate aquí</u></string>
    <string name="date_wrong">La fecha de nacimiento es incorrecta, favor de verificar.</string>
    <string name="accept_first">Debes aceptar términos y condiciones primero.</string>
    <string name="password_success">La contraseña se actualizó correctamente.</string>
    <string name="password_match">La contraseña y su confirmación no coinciden, favor de verificar.</string>
    <string name="ebook">E-book</string>
    <string name="recover_password">Recuperar Contraseña</string>
    <string name="write_your_mail">Ingresa tu correo electrónico \n para renovar tu contraseña.</string>
    <string name="wrong_mail">Lo sentimos el correo ingresado no está registrado, verifíquelo.</string>
    <string name="existing_mail">Lo sentimos el correo ingresado ya está registrado, verifíquelo.</string>
    <string name="popup_update_your_data">Actualiza tus datos</string>
    <string name="firstlogin_instructions">Por favor, crea una contraseña personalizada y añade tu correo electrónico.</string>
    <string name="password_confirm">Confirmar contraseña</string>
    <string name="home_browser">Buscar</string>
    <string name="wrong_pattern">El patrón de la contraseña es incorrecto.</string>
    <string name="youlike">Te gusta</string>
    <string name="youdislike">Ya no te gusta</string>
    <string name="fragment_celulas_de_entrenamiento_uno_titulo">Células de\nEntrenamiento (CDE)</string>
    <string name="fragment_celulas_de_entrenamiento_uno_descripcion">Es una herramienta de desarrollo que
        te permite conocer, aprender o indagar acerca de un tema o proceso específico a través
        de sesiones con los dueños de los procesos y expertos funcionales en otra División
        o Unidad Operativa.</string>
    <string name="fragment_celulas_de_entrenamiento_dos_titulo">Inducción</string>
    <string name="fragment_celulas_de_entrenamiento_dos_descripcion">Es una herramienta que te permite conocer y
    aprender los procesos básicos de tu rol a través de los dueños de procesos y/o expertos funcionales. Ésta
    aplica para nuevos ingresos y movimientos internos.</string>
    <string name="celula_entrenamiento_item_tipo_induccion">Inducción</string>
    <string name="celula_entrenamiento_item_tipo_celula_entrenamiento">Células de Entrenamiento</string>
    <string name="celula_entrenamiento_item_estado_por_autorizar">Por Autorizar</string>
    <string name="celula_entrenamiento_item_estado_por_programar">Por Programar</string>
    <string name="celula_entrenamiento_item_estado_programado">Programado</string>
    <string name="celula_entrenamiento_item_categoria_autorizador">Autorizador</string>
    <string name="celula_entrenamiento_item_categoria_solicitante">Solicitante</string>
    <string name="celula_entrenamiento_item_categoria_facilitador">Facilitador</string>
    <string name="celula_entrenamiento_item_categoria_participante">Participante</string>
    <string name="layout_datos_solicitante_titulo">Datos Solicitante</string>
    <string name="layout_datos_solicitante_numero_empleado">Número de empleado</string>
    <string name="layout_datos_solicitante_nombre_solicitante">Nombre de solicitante</string>
    <string name="layout_datos_solicitante_posicion_solicitante">Posición solicitante</string>
    <string name="layout_datos_solicitante_pais_solicitante">País solicitante</string>
    <string name="layout_datos_solicitante_correo_electronico">Correo electrónico</string>
    <string name="layout_participantes_titulo">Participantes</string>
    <string name="layout_informacion_induccion_titulo">Información de la Inducción</string>
    <string name="layout_informacion_celula_titulo">Información de la Célula</string>
    <string name="layout_informacion_induccion_tema_general">Tema general</string>
    <string name="layout_informacion_induccion_pais_solicitante">País solicitante</string>
    <string name="layout_informacion_induccion_pais_receptor">País receptor</string>
    <string name="item_tema_especifico_tiempo_sugerido">Tiempo sugerido</string>
    <string name="layout_rango_fechas_titulo">Rango de fechas</string>
    <string name="layout_rango_fechas_de">Del</string>
    <string name="layout_rango_fechas_al">Al</string>
    <string name="layout_autorizacion_titulo">Autorización</string>
    <string name="layout_fecha_numero_solicitud_fecha">Fecha de solicitud</string>
    <string name="layout_fecha_numero_solicitud_numero">No. de solicitud</string>
    <string name="activity_detalle_celula_entrenamiento_numero_empleado_2">Número de empleado: %1$s</string>
    <string name="activity_detalle_celula_entrenamiento_area_funcional">Área funcional: %1$s</string>
    <string name="activity_detalle_celula_entrenamiento_subarea_proceso">Sub Área/Proceso</string>
    <string name="activity_detalle_celula_entrenamiento_rechazar_aceptar">Rechazar/Aceptar</string>
    <string name="activity_detalle_celula_entrenamiento_tema_especifico">Tema Específico</string>
    <string name="activity_detalle_celula_entrenamiento_subtemas_especificos">Subtemas específicos</string>
    <string name="activity_detalle_celula_entrenamiento_facilitador">Facilitador</string>
    <string name="activity_detalle_celula_entrenamiento_enviar">Enviar</string>
    <string name="activity_detalle_celula_entrenamiento_contactanos">¡Contáctanos!</string>
    <string name="activity_detalle_celula_entrenamiento_contactanos_descripcion">Para
    cualquier aclaración contacta al administrador</string>
    <string name="nombreEmpleado">Martha Carolina Zerlin</string>
    <string name="numero_empleado_cardview">Número de empleado: %d</string>
    <string name="puesto">Ejecutivo Desarrollo Organizacional</string>
    <string name="areafuncional">Área funcional: %s</string>
    <string name="area_proceso">Sub Área / Proceso</string>
    <string name="area_cardview">Investigación comercial</string>
    <string name="numero_jefe">No. de Empleado de Jefe Directo</string>
    <string name="numero_jefe_ejemplo">765489</string>
    <string name="label_name_jefe">Nombre del Jefe Directo</string>
    <string name="nombre_jefe">Antonio Sánchez Mujica</string>
    <string name="label_posicion">Posición</string>
    <string name="posicion_example">Ejecutivo Knowledge Manage</string>
    <string name="label_correo">Correo</string>
    <string name="correo_example">martha.arrellano@kof.com</string>
    <string name="descargas">Descargas</string>
</resources>