<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/menu_lateral_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableStart="@mipmap/ic_circled_home"
            android:drawablePadding="10dp"
            android:padding="8dp"
            android:text="@string/menu_home"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/femsa_black"
            android:textSize="@dimen/text_medium_size" />

        <Button
            android:id="@+id/menu_lateral_celulas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableStart="@mipmap/ic_circled_sheets"
            android:drawablePadding="10dp"
            android:padding="8dp"
            android:text="@string/menu_cells"
            android:visibility="gone"
            android:enabled="false"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/femsa_black"
            android:textSize="@dimen/text_medium_size" />

        <Button
            android:id="@+id/menu_lateral_notificaciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableStart="@mipmap/ic_mail_circled"
            android:drawablePadding="10dp"
            android:padding="8dp"
            android:text="@string/menu_notif"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/femsa_black"
            android:textSize="@dimen/text_medium_size" />

        <Button
            android:id="@+id/menu_lateral_descargas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableStart="@mipmap/ic_circled_download"
            android:drawablePadding="10dp"
            android:padding="8dp"
            android:text="@string/descargas"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/femsa_black"
            android:textSize="@dimen/text_medium_size" />

        <Button
            android:id="@+id/menu_lateral_legal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawableStart="@mipmap/ic_circled_legal"
            android:drawablePadding="10dp"
            android:padding="8dp"
            android:text="@string/menu_legal"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/femsa_black"
            android:textSize="@dimen/text_medium_size" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>