<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/NumEmpleado"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/numero_empleado_cardview"
                android:textColor="@color/femsa_gray_d"
                android:textSize="@dimen/text_small_size"
                app:layout_constraintEnd_toEndOf="@+id/Puesto"
                app:layout_constraintStart_toEndOf="@+id/frameLayout5"
                app:layout_constraintTop_toBottomOf="@+id/nombreEmpleado" />

            <TextView
                android:id="@+id/Puesto"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/puesto"
                android:textColor="@color/femsa_gray_d"
                android:textSize="@dimen/text_small_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/frameLayout5"
                app:layout_constraintTop_toBottomOf="@+id/NumEmpleado" />

            <TextView
                android:id="@+id/nombreEmpleado"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/nombreEmpleado"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_medium_size"
                app:layout_constraintEnd_toStartOf="@+id/eliminar_participante"
                app:layout_constraintStart_toEndOf="@+id/frameLayout5"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/frameLayout5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/subProceso"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/nombreEmpleado">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/fotoPerfil"
                    android:layout_width="64dp"
                    android:layout_height="53dp"
                    android:layout_gravity="end|bottom" />

            </FrameLayout>

            <TextView
                android:id="@+id/AreaFuncional"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/areafuncional"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/frameLayout5"
                app:layout_constraintTop_toBottomOf="@+id/Puesto" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:text="@string/area_proceso"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/frameLayout5"
                app:layout_constraintTop_toBottomOf="@+id/AreaFuncional" />

            <TextView
                android:id="@+id/subProceso"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/femsa_red_d"
                android:ems="10"
                android:text="@string/area_cardview"
                android:textSize="16sp"
                android:textColor="@color/femsa_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/frameLayout5"
                app:layout_constraintTop_toBottomOf="@+id/textView31" />

            <View
                android:id="@+id/separador_cardview_rojo"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/femsa_red_b"
                app:layout_constraintEnd_toEndOf="@+id/subProceso"
                app:layout_constraintStart_toStartOf="@+id/subProceso"
                app:layout_constraintTop_toBottomOf="@+id/subProceso" />

            <View
                android:id="@+id/separador_cardview"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@color/femsa_gray_b"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/separador_cardview_rojo" />

            <ImageView
                android:id="@+id/eliminar_participante"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_close_gray" />


            <View
                android:id="@+id/view2"
                android:layout_width="2dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:background="@color/femsa_red_d"
                app:layout_constraintBottom_toBottomOf="@+id/tv_correo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView32" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/numero_jefe"
                android:textColor="@color/femsa_gray_d"
                android:textSize="@dimen/text_small_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view2"
                app:layout_constraintTop_toBottomOf="@+id/separador_cardview" />

            <TextView
                android:id="@+id/Num_jefe"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/numero_jefe_ejemplo"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_medium_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view2"
                app:layout_constraintTop_toBottomOf="@+id/textView32" />

            <TextView
                android:id="@+id/textView35"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/label_name_jefe"
                android:textColor="@color/femsa_gray_d"
                android:textSize="@dimen/text_small_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view2"
                app:layout_constraintTop_toBottomOf="@+id/Num_jefe" />

            <TextView
                android:id="@+id/tv_nombre_jefe"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/nombre_jefe"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_medium_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view2"
                app:layout_constraintTop_toBottomOf="@+id/textView35" />

            <TextView
                android:id="@+id/textView37"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/label_posicion"
                android:textColor="@color/femsa_gray_d"
                android:textSize="@dimen/text_small_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view2"
                app:layout_constraintTop_toBottomOf="@+id/tv_nombre_jefe" />

            <TextView
                android:id="@+id/tv_puesto_jefe"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/posicion_example"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_medium_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view2"
                app:layout_constraintTop_toBottomOf="@+id/textView37" />

            <TextView
                android:id="@+id/textView39"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/label_correo"
                android:textColor="@color/femsa_gray_d"
                android:textSize="@dimen/text_small_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view2"
                app:layout_constraintTop_toBottomOf="@+id/tv_puesto_jefe" />

            <TextView
                android:id="@+id/tv_correo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/correo_example"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_medium_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/view2"
                app:layout_constraintTop_toBottomOf="@+id/textView39" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>